Update Swagger files and api to v1
