# src/resources/search/filter.route.js
@@ -10,11 +10,11 @@ router.get('/topic/:type', async (req, res) => {
     q.exec((err, data) => {
       if (err) return res.json({ success: false, error: err });
       var tempTopics = [];
-      data.map((dat) => {
-        dat.tags.topics.map((topic) => {
-          topic.length <=0 ? tempTopics=tempTopics : tempTopics.push(topic);
+        data.map((dat) => {
+          dat.tags.topics.map((topic) => {
+            topic.length <=0 ? tempTopics=tempTopics : tempTopics.push(topic);
+          });
         });
-      });
   
       const combinedTopics = [];
       tempTopics.map(temp => {
@@ -31,23 +31,26 @@ router.get('/topic/:type', async (req, res) => {
   router.get('/feature/:type', async (req, res) => {
     //req.params.id is how you get the id from the url
     var q = Data.find({ type: req.params.type });
-  
+
     q.exec((err, data) => {
       if (err) return res.json({ success: false, error: err });
       var tempFeatures = [];
-      data.map((dat) => {
-        dat.tags.features.map((feature) => {
-          feature.length <= 0 ? tempFeatures=tempFeatures : tempFeatures.push(feature);
+      if(data.length){
+        data.map((dat) => {
+          dat.tags.features.map((feature) => {
+            feature.length <= 0 ? tempFeatures=tempFeatures : tempFeatures.push(feature);
+          });
         });
-      });
-  
+      }
+
       const combinedFeatures = [];
-      tempFeatures.map(temp => {
-        if (combinedFeatures.indexOf(temp) === -1) {
-          combinedFeatures.push(temp)
-        }
-      });
-  
+      if(tempFeatures.length) {
+        tempFeatures.map(temp => {
+          if (combinedFeatures.indexOf(temp) === -1) {
+            combinedFeatures.push(temp)
+          }
+        });
+      }
       return res.json({ success: true, data: combinedFeatures });
     });
   });
@@ -103,6 +106,28 @@ router.get('/topic/:type', async (req, res) => {
   
   
   router.get('/license/:type', async (req, res) => {
+    // try {
+    //   const data = await Data.find({type: req.params.type});
+    //   if (!data) {
+    //     return res.status(400).json({ success: false, error: 'Could not get license types' });
+    //   }
+    //   let licences = [];
+    //   // puts all licences in array
+    //   let fullLicenseArr = [...data].map((d) => {
+    //       if(d.license != null)
+    //         return d.license;
+    //     });
+    //     // removes duplicates from array
+    //     licences =  [...fullLicenseArr].filter((item, idx) => {
+    //       return fullLicenseArr.indexOf(item) === idx && item != null;
+    //     });      
+    //     return res.json({ success: true, data: licences });
+    // } 
+    // catch(error) {
+    //   console.error(error);
+    //   res.status(500).send({ success: false, error });
+    // }
+
     //req.params.id is how you get the id from the url
     var q = Data.find({ type: req.params.type });
   
@@ -110,16 +135,16 @@ router.get('/topic/:type', async (req, res) => {
       if (err) return res.json({ success: false, error: err });
       var tempLicenses = [];
       data.map((dat) => {
-        dat.license.length <= 0 ? tempLicenses=tempLicenses : tempLicenses.push(dat.license);
+        if(dat.license)
+          dat.license.length <= 0 ? tempLicenses=tempLicenses : tempLicenses.push(dat.license);
       });
-  
+
       const combinedLicenses = [];
       tempLicenses.map(temp => {
         if (combinedLicenses.indexOf(temp) === -1) {
           combinedLicenses.push(temp)
         }
       });
-  
       return res.json({ success: true, data: combinedLicenses });
     });
   });
